--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=testing jest --verbose --runInBand --silent"
+    "test": "cross-env NODE_ENV=testing jest --verbose --runInBand --silent",
+    "start": "node index.js",
+    "server": "nodemon index.js",
+    "rollback": "knex migrate:rollback",
+    "migrate": "knex migrate:latest",
+    "seed": "knex seed:run"
   },
   "repository": {
     "type": "git",
@@ -14,6 +19,13 @@
     "cross-env": "7.0.3",
     "eslint": "8.10.0",
     "jest": "27.5.1",
+    "nodemon": "^2.0.15",
     "supertest": "6.2.2"
+  },
+  "dependencies": {
+    "@vscode/sqlite3": "^5.0.8",
+    "express": "^4.17.3",
+    "knex": "^2.0.0",
+    "sqlite3": "^5.0.5"
   }
 }
